--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name" translatable="false">test</string>
     <string name="startpage">Home</string>
-    <string name="subscriptions">Subscriptions</string>
+    <string name="subscriptions">Feed</string>
     <string name="library">Library</string>
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
@@ -304,7 +304,7 @@
     <string name="limit_to_runtime">Limit to runtime</string>
     <string name="trends">Trends</string>
     <string name="featured">Featured</string>
-    <string name="trending">What\'s trending now</string>
+    <string name="trending">Trending</string>
     <string name="bookmarks">Bookmarks</string>
     <string name="bookmark">Bookmark</string>
     <string name="clear_bookmarks">Clear bookmarks</string>
